--- a/site/index.html
+++ b/site/index.html
@@ -81,9 +81,9 @@ label {
     height: 100%;
 }
 
-@media (max-width: 900px) { /* Requête média pour les écrans plus petits */
+@media (max-width: 900px) { 
   .text-container {
-    flex-direction: column; /* Les divs sont empilées verticalement sur de petits écrans */
+    flex-direction: column; 
   }
 }
 
